Added friend request create frontend
